Fix to allow servers to sit behind ReverseProxies: add script_name to rbbt.ajax, don't append script_name twice on job.url redirects

--- a/share/views/compass/app.sass
+++ b/share/views/compass/app.sass
@@ -15,7 +15,8 @@ a.entity
   text-overflow: ellipsis
   vertical-align: bottom
 
-.description
+.description.very.basic
+  padding: 2px !important
   overflow: hidden
   &:hover
     overflow: visible
